fix: add z-index: 0 in styles for cementery-game, choose-games-page, main-page

--- a/src/app/pages/chooseGames/style-choose-games.scss
+++ b/src/app/pages/chooseGames/style-choose-games.scss
@@ -13,6 +13,7 @@ $moon-shadow: rgba(50, 50, 50, 0.75);
 }
 
 .map {
+  z-index: 0;
   position: relative;
   width: 100%;
   height: 100%;
